fix double scrollbar on the Y-axis of onboarding page

--- a/app/assets/stylesheets/modules/_onboarding.styl
+++ b/app/assets/stylesheets/modules/_onboarding.styl
@@ -4,7 +4,6 @@ body.onboarding
   background-repeat no-repeat
   background-position center 75%
   background-size cover
-  overflow-y scroll
 
   color #fff
   a
